syntax = "proto3";

option csharp_namespace = "RSoft.Account.Grpc";

// service definitions
service Users {
	rpc CreateUser (CreateUserRequest) returns (CreateUserReply);
}

// message contracts
message CreateUserRequest {
	string first_name = 1;
	string last_name = 2;
}
message CreateUserReply {
	bool success = 1;
	string data = 2;
	string errors = 3;
}